--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 numpy==1.26.3
 pandas==2.2.0
 matplotlib==3.8.2
-seaborn==0.13.2
-scikit-learn==1.4.0
 opencv-python==4.9.0.80
 jupyter==1.0.0
 tensorflow==2.15.0
+scikit-learn==1.4.0
+scikit-image==0.22.0
